--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <img id="header-logo" src="img/logo.svg" alt="Logo the Booleaner"> 
+        </div>
+    </header>
+    <!-- /Header -->
     
 </body>
 </html>
