--- a/index.html
+++ b/index.html
@@ -84,6 +84,21 @@
         </div>
     </main>
     <!-- /Main -->
-    
+
+    <!-- Footer -->
+    <footer>
+        <div class="container mt-2">
+            <h3 class="footer-title">Potrebbero interessarti</h3>
+
+            <div id="computer" class="footer-item">
+                Lorem ipsum dolor
+            </div>
+
+            <div id="graph" class="footer-item">
+                Lorem ipsum dolor
+            </div>
+        </div>
+    </footer>
+    <!-- /Footer -->
 </body>
 </html>
